--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
        <div class="social">
         <P>Login with another account</P>
         <div class="icons">
-            <a href=""><img src="images/linked.webp"></a>
-            <a href=""><img src="images/insta.jpg"></a>
-            <a href=""><img src="images/face.png"></a>
-            <a href=""><img src="images/git.png"></a>
+            <a href=""><img src="linked.webp"></a>
+            <a href=""><img src="insta.jpg"></a>
+            <a href=""><img src="face.png"></a>
+            <a href=""><img src="git.png"></a>
         </div>
         
        </div>
